fixedIconAlignment

--- a/Web/GraphExplorer/ClientApp/app/components/app/icons.css
+++ b/Web/GraphExplorer/ClientApp/app/components/app/icons.css
@@ -26,6 +26,8 @@
 .CommercialGraphIcons
 {
     font-family: 'CommercialGraphIcons';
+	position: relative;
+	top: 1px;
     display: inline-block;
     line-height: 1;
     font-style: normal;
